--- a/static/index.html
+++ b/static/index.html
@@ -13,12 +13,12 @@
 <header class="header">
     <div class="container header-wrapper grid-col3">
         <div class="grid-item header-logo">
-            <img src="img/icons/ede.png" alt="">
+            <img src="images/icons/ede.png" alt="">
             <span>Заказать диплом или курсовую у реальных практиков</span>
         </div>
         <div class="grid-item header-statistic">
             <div class="header-statistic-wrapper">
-                <img src="img/header_books.png" alt="">
+                <img src="images/header_books.png" alt="">
                 <p>47,470<span>работ выполнено</span></p>
             </div>
             <a href="#">посмотреть работы</a>
@@ -41,7 +41,7 @@
         <div class="mobile-menu-panel-inner">
             <div class="header-dropdown-user" >
                 <!-- <a class="link" href="#">Зарегистрироваться</a> -->
-                <img src="img/icons/EDE.png" alt="">
+                <img src="images/icons/EDE.png" alt="">
                 <a class="link" href="#">Анастатися</a>
             </div>
             <ul class="mobile-nav">
@@ -55,7 +55,7 @@
         </div>
     </div><!-- end mobile-menu-panel -->
     <div class="header-dropdown">
-        <img src="img/icons/EDE.png" alt="">
+        <img src="images/icons/EDE.png" alt="">
         <ul class="nav">
             <li class="active"><a href="#">Главная</a></li>
             <li><a href="#">Цены и сроки</a></li>
@@ -67,14 +67,14 @@
         <a href="#" class="btn ">оформить заявку</a>
         <div class="header-dropdown-user" >
             <!-- <a class="link" href="#">Зарегистрироваться</a> -->
-            <img src="img/icons/EDE.png" alt="">
+            <img src="images/icons/EDE.png" alt="">
             <a class="link" href="#">Анастатися</a>
         </div>
     </div><!-- end header-dropdown -->
     <div class="container  header-inner">
 
         <h1>Вашу работу выполнит <span>настоящий практик</span><br/>менее чем за 1 неделю</h1>
-        <p><span>Узнайте стоимость</span> своей работы прямо на сайте с<br/>помощью нашей формы</p>
+        <p class="not-visible-sm"><span>Узнайте стоимость</span> своей работы прямо на сайте с<br/>помощью нашей формы</p>
 
         <a href="#" class="btn btn-lg">Узнать цену своей работы</a>
 
@@ -159,18 +159,22 @@
                     <input class="form-control" value="" placeholder="Предмет">
                     <input class="form-control" value="" placeholder="Предмет">
                 </div>
-                <button  class="btn btn-lg m-a mt30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></button>
-                <input type="checkbox" name="personal" checked>
+                <button  class="btn btn-lg m-a mt30 mb30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></button>
+
+                <label class="custom-checkbox"><span>Даю согласие на обработку моих персональных данных</span>
+                    <input name="" checked  type="checkbox">
+                    <span class="checkmark"></span>
+                </label>
             </div>
         </div>
     </section><!-- // calculation-form -->
     <section class="about-man">
         <div class="container">
             <h3 class="mb50">Работу выполнит человек, <span>специализирующийся</span><br>на вашей специальности</h3>
-            <p class="text-block">
+            <p class="text-block not-visible-sm">
                 Мы несколько раз меняли исполнителей, именно потому, что нам было необхадимо лично видеть, что человек искрене любит свое дело, а значит, к каждой работе будет подходить уникально и ответственно, работая на результат.
             </p>
-            <p class="text-block mt30">
+            <p class="text-block mt30 not-visible-sm">
                 И вот, наш состав не меняется уже на протяжении 7-ми лет, каждый из нас имеет <strong>докторскую или учёную степень</strong>, а главное, желаение выполнять свое любимое дело, а не просто зарабатывать деньги.
             </p>
         </div>
@@ -205,8 +209,8 @@
     <section class="how-it-works">
         <div class="container">
             <h3 class="text-center">Как происходит ход работы</h3>
-            <h4 class="text-center">Узнайте, что будет, после того как вы обратитесь к нам за помощью</h4>
-            <div class="how-it-works-numbers">
+            <h4 class="text-center not-visible-sm">Узнайте, что будет, после того как вы обратитесь к нам за помощью</h4>
+            <div class="how-it-works-numbers not-visible-sm">
                 <div id="step_1" class="how-it-works-step step-active">
                     <a href="#"><span>01</span></a>
                 </div>
@@ -227,8 +231,8 @@
                         <h5 data-number="01" class="mb30">Оставьте заявку и узнайте цену</h5>
                         <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
                     </div>
-                    <div class="slide-img text-right">
-                        <img src="img/hw-slider.jpg" alt="">
+                    <div class="slide-img text-right not-visible-sm">
+                        <img src="images/hw-slider.jpg" alt="">
                     </div>
                 </div>
                 <div id="slide_2" class="how-it-works-slide ">
@@ -237,7 +241,7 @@
                         <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right">
-                        <img src="img/hw-slider.jpg" alt="">
+                        <img src="images/hw-slider.jpg" alt="">
                     </div>
                 </div>
                 <div id="slide_3" class="how-it-works-slide ">
@@ -246,7 +250,7 @@
                         <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right">
-                        <img src="img/hw-slider.jpg" alt="">
+                        <img src="images/hw-slider.jpg" alt="">
                     </div>
                 </div>
                 <div id="slide_4" class="how-it-works-slide ">
@@ -255,7 +259,7 @@
                         <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right">
-                        <img src="img/hw-slider.jpg" alt="">
+                        <img src="images/hw-slider.jpg" alt="">
                     </div>
                 </div>
 
@@ -272,7 +276,7 @@
             </div>
         </div>
     </section><!-- // how-it-works -->
-    <section class="lets-meet">
+    <section class="lets-meet not-visible-md">
         <div class="container">
             <div class="lets-meet-inner">
                 <h3>Давайте познакомимся<br/> с вами лично</h3>
@@ -289,12 +293,12 @@
             </div>
         </div>
     </section><!-- // lets-meet -->
-    <section class="our-help">
+    <section class="our-help not-visible-md">
         <div class="container ">
             <h3>Посмотрите, как мы уже помогли другим клиентам</h3>
             <h4 class="text-center mb50">Несколько примеров нашей работы и реальные отзывы о ней</h4>
             <div class="our-help-inner">
-                <div class="our-help-media" style="background: url(img/help_bg_big.jpg) no-repeat">
+                <div class="our-help-media" style="background: url(images/help_bg_big.jpg) no-repeat">
                 </div>
                 <div class="our-help-info">
                     <div class="our-help-info-header mb30">
@@ -311,42 +315,42 @@
             <div class="our-help-media-slider" id="our-help-media-slider">
                 <div class="our-help-media-slide-item">
                     <div class="our-help-media-slide-image">
-                        <img src="img/slide-item.png" alt="">
+                        <img src="images/slide-item.png" alt="">
                     </div>
                     <h5>Студент очник</h5>
                     <p>Совместно выявили самые сложные моменты в его программе и взяли их на себя</p>
                 </div>
                 <div class="our-help-media-slide-item">
                     <div class="our-help-media-slide-image">
-                        <img src="img/slide-item.png" alt="">
+                        <img src="images/slide-item.png" alt="">
                     </div>
                     <h5>Студент очник</h5>
                     <p>Совместно выявили самые сложные моменты в его программе и взяли их на себя</p>
                 </div>
                 <div class="our-help-media-slide-item">
                     <div class="our-help-media-slide-image">
-                        <img src="img/slide-item.png" alt="">
+                        <img src="images/slide-item.png" alt="">
                     </div>
                     <h5>Студент очник</h5>
                     <p>Совместно выявили самые сложные моменты в его программе и взяли их на себя</p>
                 </div>
                 <div class="our-help-media-slide-item">
                     <div class="our-help-media-slide-image">
-                        <img src="img/slide-item.png" alt="">
+                        <img src="images/slide-item.png" alt="">
                     </div>
                     <h5>Студент очник</h5>
                     <p>Совместно выявили самые сложные моменты в его программе и взяли их на себя</p>
                 </div>
                 <div class="our-help-media-slide-item">
                     <div class="our-help-media-slide-image">
-                        <img src="img/slide-item.png" alt="">
+                        <img src="images/slide-item.png" alt="">
                     </div>
                     <h5>Студент очник</h5>
                     <p>Совместно выявили самые сложные моменты в его программе и взяли их на себя</p>
                 </div>
                 <div class="our-help-media-slide-item">
                     <div class="our-help-media-slide-image">
-                        <img src="img/slide-item.png" alt="">
+                        <img src="images/slide-item.png" alt="">
                     </div>
                     <h5>Студент очник</h5>
                     <p>Совместно выявили самые сложные моменты в его программе и взяли их на себя</p>
@@ -354,10 +358,10 @@
             </div>
             <div class="controls" id="customize-controls">
                 <div class="prev">
-                    <img src="img/icons/blue_left_arrow.svg" alt="">
+                    <img src="images/icons/blue_left_arrow.svg" alt="">
                 </div>
                 <div class="next">
-                    <img src="img/icons/blue_right_arrow.svg" alt="">
+                    <img src="images/icons/blue_right_arrow.svg" alt="">
                 </div>
             </div>
         </div>
@@ -376,55 +380,55 @@
         </div>
 
     </section>
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-top grid-col4">
-                <div class="footer-top-info">
-                    <p>Все материалы данного сайта защищены авторским правом. Полное или частичное копирование запрещено. Информация предназначена для аудитории 14+</p>
-                </div>
-                <div class="footer-top-list">
-                    <p>Реквизиты в России:</p>
-                    <ul>
-                        <li>ИП Фамилия И.И.</li>
-                        <li>ИНН 54651326526</li>
-                        <li>ОГРНИП 561563592526</li>
-                    </ul>
-                </div>
-                <div class="footer-top-list">
-                    <p>Адрес офиса:</p>
-                    <ul>
-                        <li>г. Челябинск</li>
-                        <li>7010, ул. Название, 55</li>
-                        <li>Телефон: +7 351 230 80 40</li>
-                    </ul>
-                </div>
-
-                <div class="footer-top-phones text-right">
-                    <p>+7 (351) 230 80 40</p>
-                    <a href="#" class="btn ">заказать звонок</a>
-                </div>
-
-
-            </div>
-            <div class="footer-bottom">
-                <div class="header-logo">
-                    <img src="img/icons/ede.png" alt="">
-                    <span>Заказать диплом или курсовую у реальных практиков</span>
-                </div>
-                <div class="footer-social">
-                    <a class="link" href="#">политика конфидициальности</a>
-
-                    <ul>
-                        <li><a href="#" rel="nofollow"><span class="vk_icon"></span></a></li>
-                        <li><a href="#" rel="nofollow"><span class="fb_icon"></span></a></li>
-                        <li><a href="#" rel="nofollow"><span class="inst_icon"></span></a></li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </footer>
 </div><!-- // main -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer-top grid-col4">
+            <div class="footer-top-info">
+                <p>Все материалы данного сайта защищены авторским правом. Полное или частичное копирование запрещено. Информация предназначена для аудитории 14+</p>
+            </div>
+            <div class="footer-top-list not-visible-sm">
+                <p>Реквизиты в России:</p>
+                <ul>
+                    <li>ИП Фамилия И.И.</li>
+                    <li>ИНН 54651326526</li>
+                    <li>ОГРНИП 561563592526</li>
+                </ul>
+            </div>
+            <div class="footer-top-list not-visible-sm">
+                <p>Адрес офиса:</p>
+                <ul>
+                    <li>г. Челябинск</li>
+                    <li>7010, ул. Название, 55</li>
+                    <li>Телефон: +7 351 230 80 40</li>
+                </ul>
+            </div>
+
+            <div class="footer-top-phones text-right">
+                <p>+7 (351) 230 80 40</p>
+                <a href="#" class="btn ">заказать звонок</a>
+            </div>
+
+
+
+            <div class="header-logo not-visible-sm">
+                <img src="images/icons/ede.png" alt="">
+                <span>Заказать диплом или курсовую у реальных практиков</span>
+            </div>
+            <div class="footer-social">
+                <a class="link" href="#">политика конфидициальности</a>
+
+                <ul>
+                    <li><a href="#" rel="nofollow"><span class="vk_icon"></span></a></li>
+                    <li><a href="#" rel="nofollow"><span class="fb_icon"></span></a></li>
+                    <li><a href="#" rel="nofollow"><span class="inst_icon"></span></a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</footer>
+
 
 
 
