--- a/static/contacts.html
+++ b/static/contacts.html
@@ -62,50 +62,68 @@
         <div class="breadcrumbs">
             <ul>
                 <li><a href="#">Главная</a></li>
-                <li class="active">Полезные статьи</li>
+                <li class="active">Контакты</li>
             </ul>
         </div>
     </div><!--// breadcrumbs-->
 
-    <section class="blog">
+    <section class="contacts">
         <div class="container">
-            <h1 class="mb50">Блог</h1>
-            <div class="grid-col3 blog-posts-wrapper">
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-            </div><!--// blog-posts-wrapper-->
+            <h1 class="mb50">Контакты</h1>
+        </div>
+
+        <div class="contacts-bg">
+            <div class="container">
+
+                <div class="contacts-work-time ">
+                    <p class="text-block mb30">График работы: <span>10:00 - 18:00</span></p>
+                    <p class="text-block mb40">Звонок бесплатный <span>из любой точки России</span></p>
+                    <a href="#" class="btn">заказать обратный звонок</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="contacts-wrapper">
+                <div class="contacts-phones">
+                    <div class="contacts-phones-header">
+                        <p>Есть вопрос? Звоните!</p>
+                    </div>
+                    <div class="contacts-phones-inner">
+                        <ul>
+                            <li><p class="contacts-phones-town">Из Челябинска</p>
+                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
+                            <li><p class="contacts-phones-town">Из Челябинска</p>
+                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
+                            <li><p class="contacts-phones-town">Из Челябинска</p>
+                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
+                            <li><p class="contacts-phones-town">Из Челябинска</p>
+                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
+                            <li><p class="contacts-phones-town">Из Челябинска</p>
+                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="contacts-mail ">
+                    <div class="contacts-mail-header">
+                        <p>Или пишите!</p>
+                    </div>
+                    <div class="contacts-mail-info">
+                        <p class="mb30">Любую информациюможно уточнить в любом мессенджере по номеру:</p>
+                        <span class="mb30">8 900 356 56 56</span>
+                    </div>
+                    <div class="contacts-mail-info no-border">
+                        <p class="pt30 mb30">Любую интересующую информацию можно уточнить по адресу:</p>
+                        <span>help@edelveys.ru</span>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
 
-    </section><!--// blog-->
+    </section><!--// contacts-->
 </div><!-- // main -->
 <footer class="footer">
     <div class="container">
