--- a/static/price.html
+++ b/static/price.html
@@ -62,50 +62,92 @@
         <div class="breadcrumbs">
             <ul>
                 <li><a href="#">Главная</a></li>
-                <li class="active">Полезные статьи</li>
+                <li class="active">Цены и сроки</li>
             </ul>
         </div>
     </div><!--// breadcrumbs-->
 
-    <section class="blog">
+    <section class="all-prices">
         <div class="container">
-            <h1 class="mb50">Блог</h1>
-            <div class="grid-col3 blog-posts-wrapper">
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-            </div><!--// blog-posts-wrapper-->
+            <h1 class="mb50">Цены на основные услуги</h1>
+            <div class="prices-wrapper">
+                <div class="price-item bg-grey">
+                    <h5>Дипломая работа</h5>
+                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
+                    <p class="mb20">Работ выполнено:<span>23,783</span></p>
+                    <a href="#" class="btn">заказать работу</a>
+                </div>
+                <div class="price-item bg-grey">
+                    <h5>Дипломая работа</h5>
+                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
+                    <p class="mb20">Работ выполнено:<span>23,783</span></p>
+                    <a href="#" class="btn">заказать работу</a>
+                </div>
+                <div class="price-item bg-grey">
+                    <h5>Дипломая работа</h5>
+                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
+                    <p class="mb20">Работ выполнено:<span>23,783</span></p>
+                    <a href="#" class="btn">заказать работу</a>
+
+                </div>
+            </div><!--//prices-wrapper -->
+            <div class="price-search">
+                <h3 class="not-visible-sm">Все услуги</h3>
+                <input class="form-control borderless" name="" placeholder="Поиск по виду работы">
+            </div>
+            <div class="prices-items">
+
+                <div class="prices-item mb20">
+                    <div class="prices-item-inner">
+                        <p class="price-item-name">Контрольная работа</p>
+                        <p class="price-item-cost not-visible-sm">от 100 р</p>
+                        <p class="price-item-time not-visible-sm">от 1 дня</p>
+                        <a href="#" ><span ></span></a>
+                    </div>
+                    <div class="price-item dropdown-prices ">
+                        <p class="mb20">Сроки:<span>от 1 дня</span></p>
+                        <p class="mb20">Цена:<span>от 100 р</span></p>
+                        <a href="#" class="btn">заказать</a>
+                    </div>
+                </div>
+                  <div class="prices-item mb20">
+                    <div class="prices-item-inner">
+                        <p class="price-item-name">Контрольная работа</p>
+                        <p class="price-item-cost not-visible-sm">от 100 р</p>
+                        <p class="price-item-time not-visible-sm">от 1 дня</p>
+                        <a href="#" ><span></span></a>
+                    </div>
+                    <div class="price-item dropdown-prices">
+                        <p class="mb20">Сроки:<span>от 1 дня</span></p>
+                        <p class="mb20">Цена:<span>от 100 р</span></p>
+                        <a href="#" class="btn">заказать</a>
+                    </div>
+                </div>
+
+
+
+            </div>
+
         </div>
 
 
-    </section><!--// blog-->
+    </section><!--// all-prices-->
+    <section class="why-our-work">
+        <div class="container">
+            <h3>Почему работу лучше купить,<br>чем делать самому?</h3>
+            <p class="mb40">Дипломная работа - это самое сложное и ответственное <span>задание за весь учебный срок</span></p>
+            <p class="mb40"><span>Риск получить низкий балл</span> из-за преподавателей и сложности оформления</p>
+            <p class="mb40">Лучше <span>положиться на профессионалов,</span> чем ошибиться самому</p>
+            <p>Написание дипломных работ – практически всегда <span>нервотрепка и стресс</span></p>
+
+
+
+        </div>
+
+    </section>
 </div><!-- // main -->
 <footer class="footer">
     <div class="container">
