--- a/static/blog-item.html
+++ b/static/blog-item.html
@@ -62,46 +62,24 @@
         <div class="breadcrumbs">
             <ul>
                 <li><a href="#">Главная</a></li>
-                <li class="active">Полезные статьи</li>
+                <li><a href="#">Блог</a></li>
+                <li class="active">Название статьи</li>
             </ul>
         </div>
     </div><!--// breadcrumbs-->
 
-    <section class="blog">
+    <section class="blog-post">
         <div class="container">
-            <h1 class="mb50">Блог</h1>
-            <div class="grid-col3 blog-posts-wrapper">
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-                <div class="blog-post-item">
-                    <a href=""><img class="mb30" src="images/blog-item.png" alt=""></a>
-                    <h5 class="mb20"><a href="#">Название статьи - пишется в две строки</a></h5>
-                    <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus eius libero necessitatibus?</p>
-                </div><!--// blog-post-item-->
-            </div><!--// blog-posts-wrapper-->
+           <div class="blog-post-wrapper grid-col2">
+               <div class="blog-post-text">
+                <h1>Название статьи - пишется в две строки</h1>
+                   <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur</p>
+               </div>
+               <div class="blog-post-image">
+                    <img src="images/blog-post.png" alt="">
+               </div>
+           </div>
+
         </div>
 
 
